--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="description" content="Make lil links">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/react-table.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="react-table.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
-    <script type="text/javascript" src="/build/index.js"></script>
+    <script type="text/javascript" src="build/index.js"></script>
   </body>
 </html>
